# helicorder-plotter-v2

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
helicorder/: __init__.py  cli.py  config.py  fetcher.py  models.py  plotter.py  site.py
live/: README.md  WAVEFORM_INTEGRATION_README.md  app.js  dashboard.html  dashboard.js  index.html  pro-dashboard.js
static/css/: styles.css
static/js/: map.js
templates/: base.html  index.html  map.html  station.html
tests/: test_config.py  test_fetcher.py  test_models.py
